app/native/playback.h

// Playback region
// typedef struct {
//     int start;
//     int end;                        // exclusive
// } PlaybackRegion;

// Single live playback state (authoritative)
typedef struct {
    // FFI-visible prefix (read directly by Dart)
    uint32_t version;               // even=stable, odd=writer in progress
    int is_playing;                 // 0/1
    int current_step;               // current sequencer step
    int bpm;                        // current BPM
    int region_start;               // inclusive start of playback region
    int region_end;                 // exclusive end of playback region
    int song_mode;                  // 0=loop, 1=song
    int* sections_loops_num;        // &sections_loops_num_storage[0]
    int current_section;            // current section being played
    int current_section_loop;       // current loop within section (0-based)

    // Canonical storage
    int sections_loops_num_storage[MAX_SECTIONS];
} PlaybackState;
// Playback initialization and cleanup
__attribute__((visibility("default"))) __attribute__((used))
int playback_init(void);
__attribute__((visibility("default"))) __attribute__((used))
void playback_cleanup(void);
// Playback control
__attribute__((visibility("default"))) __attribute__((used))
int playback_start(int bpm, int start_step);
__attribute__((visibility("default"))) __attribute__((used))
void playback_stop(void);
// Playback settings
__attribute__((visibility("default"))) __attribute__((used))
void playback_set_bpm(int bpm);
__attribute__((visibility("default"))) __attribute__((used))
void playback_set_region(int start, int end);
__attribute__((visibility("default"))) __attribute__((used))
void playback_set_mode(int song_mode);
// Section loops management
__attribute__((visibility("default"))) __attribute__((used))
void playback_set_section_loops_num(int section, int loops);
// Section switching helper (stops and restarts playback at section start if needed)
__attribute__((visibility("default"))) __attribute__((used))
void switch_to_section(int section_index);
// Master volume control (0.0 .. 1.0)
__attribute__((visibility("default"))) __attribute__((used))
void playback_set_master_volume(float volume01);
// Enhanced playback logging (for debugging)
__attribute__((visibility("default"))) __attribute__((used))
void playback_set_enhanced_logging(int enabled);
// Return a stable pointer to the native PlaybackState struct (prefix-mapped)
__attribute__((visibility("default"))) __attribute__((used))
const PlaybackState* playback_get_state_ptr(void);
// Output recording (WAV) control
__attribute__((visibility("default"))) __attribute__((used))
int recording_start(const char* file_path);
__attribute__((visibility("default"))) __attribute__((used))
void recording_stop(void);
__attribute__((visibility("default"))) __attribute__((used))
int recording_is_active(void);