app/native/sunvox_wrapper.h

// Reset ALL SunVox patterns (used before import to ensure clean state)
__attribute__((visibility("default"))) __attribute__((used))
void sunvox_wrapper_reset_all_patterns(void);
// Sync entire section to its SunVox patter
__attribute__((visibility("default"))) __attribute__((used))
void sunvox_wrapper_sync_section(int section_index);
// Seamless timeline update for pattern size changes (add/remove steps)
// This updates pattern X positions WITHOUT stopping playback
// section_index: which section was resized (for loop mode refresh)
__attribute__((visibility("default"))) __attribute__((used))
void sunvox_wrapper_update_timeline_seamless(int section_index);
// NOTE: Microphone Input module functions removed - mic recording now bypasses SunVox entirely
// Mic audio is captured directly to WAV file without going through SunVox
// See docs/features/microphone_dual_output_architecture.md for archived approach

// Wrapper for SunVox sv_get_module_scope2 (for waveform visualization)
// Get audio scope data from a specific module
// Returns: number of samples returned
__attribute__((visibility("default"))) __attribute__((used))
uint32_t sunvox_wrapper_get_module_scope2(int slot, int mod_num, int channel, int16_t* dest_buf, uint32_t samples_to_read);
// Set pattern event with sample offset (for precise positioning)
// Uses SunVox 09xx (coarse) and 07xx (fine) offset effects for sub-step precision
// Note: sample_slot parameter (not module ID) - looks up module internally
__attribute__((visibility("default"))) __attribute__((used))
void sunvox_wrapper_set_pattern_event_with_offset(
    int pat_id, int track, int line, int note, int velocity, 
    int sample_slot, int offset_frames
);